--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es2016",                                  
-    "lib": ["es6"],                                      
-    "module": "commonjs",                                
-    "rootDir": "src",                                    
-    "resolveJsonModule": true,                           
-    "allowJs": true,                                     
-    "outDir": "build",                                   
-    "esModuleInterop": true,                            
-    "forceConsistentCasingInFileNames": true,            
-    "strict": true,                                      
-    "noImplicitAny": true,                               
-    "skipLibCheck": true                                 
-  }
+    "target": "es2016",
+    "lib": ["es6"],
+    "module": "commonjs",
+    "rootDir": "src",
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "outDir": "build",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "skipLibCheck": true
+  },
+  "exclude": ["node_modules", "prisma", "jest.config.js"]
 }
