--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@prisma/client": "5.9.1",
     "@types/node": "^20.11.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "helmet": "^7.1.0",
     "i18next": "^23.8.2",
     "jsonwebtoken": "^9.0.2",
     "typescript": "*",
@@ -13,6 +15,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
@@ -33,9 +36,9 @@
   "scripts": {
     "start:dev": "npx nodemon",
     "start:prod": "node build",
-    "db:migrate": "npx prisma migrate dev", 
-    "db:seed": "ts-node prisma/seed.ts", 
-    "build": "npx rimraf build && yarn tsc", 
+    "db:migrate": "npx prisma migrate dev",
+    "db:seed": "ts-node prisma/seed.ts",
+    "build": "npx rimraf build && yarn tsc",
     "test": "jest --config=jest.config.js",
     "format": "prettier --ignore-path .gitignore --write \"src/**/*.+(js|ts|json)\""
   },
